--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,6 +1,6 @@
 {
   "lang": "zh",
-  "start": "开始游戏",
+  "start": "开始试验❤❤",
   "normal": "普通模式",
   "endless": "无尽模式",
   "practice": "练习模式",
@@ -15,10 +15,10 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉小心海🤤🤤",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
+  "game-title": "心海的试验❤❤❤",
   "game-intro1": "从最底下的开始",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
