--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,6 +1,6 @@
 {
   "lang": "zh",
-  "start": "开始试验❤❤",
+  "start": "开始试验",
   "normal": "普通模式",
   "endless": "无尽模式",
   "practice": "练习模式",
@@ -18,8 +18,8 @@
   "eat-kano": "吃掉小心海🤤🤤",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "心海的试验❤❤❤",
-  "game-intro1": "从最底下的开始",
+  "game-title": "心海的试验💙",
+  "game-intro1": "别看我了，开始点吧",
   "game-intro2": "看你能得多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
@@ -31,8 +31,8 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
+  "text-level-1": "你连碰到心海大人的袜子的实力都没有",
+  "text-level-2": "勉强摸到袜袜了",
   "text-level-3": "TQL",
   "text-level-4": "您",
   "text-level-5": "人?",
