--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -19,8 +19,8 @@
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
   "game-title": "心海的试验💙",
-  "game-intro1": "别看我了，开始点吧",
-  "game-intro2": "看你能得多少分",
+  "game-intro1": "为心海大人的袜袜努力吧！",
+  "game-intro2": "",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
